--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Clock</title>
 </head>
 <body>
+
+    <div class="clocks">
+        <div id="seconds-hand"></div>
+        <div id="minutes-hand"></div>
+        <div id="hours-hand"></div>
+        <div id="center"></div>
+    </div>
+
+
+
 <span class="content">
     <div id="clock"></div>
 </span>
